# feynman

./: .feynman.cabal.swp  feynman.cabal
app/: Main.hs
src/: Feynman.hs
test/: Spec.hs
