name:                feynman
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         A simple example using Haskell to solve the Feynman's Squares problem.
homepage:            https://github.com/isaacpinheiro/feynman
license:             BSD3
license-file:        LICENSE
author:              Isaac Pinheiro
maintainer:          isaacpnhr@gmail.com
copyright:           2016 Isaac Pinheiro
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Feynman
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable feynman-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , feynman
  default-language:    Haskell2010

test-suite feynman-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base, hspec == 2.*
                     , feynman
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/isaacpinheiro/feynman
